--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             user-friendly websites.
           </p>
           <div class="btn-con">
-            <a href="" class="main-btn">
+            <button type="button" class="main-btn">
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
-            </a>
+            </button>
           </div>
         </div>
       </div>
@@ -71,10 +71,10 @@
               <br />
             </p>
             <div class="btn-con">
-              <a href="#" class="main-btn">
+              <button type="button" class="main-btn">
                 <span class="btn-text">Download CV</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
-              </a>
+              </button>
             </div>
           </div>
 
@@ -402,7 +402,7 @@
               </div>
             </div>
             <div class="right-contact">
-              <form action="" class="contact-form">
+              <form action="" id="form" class="contact-form">
                 <div class="input-control i-c-2">
                   <input type="text" required placeholder="YOUR NAME" />
                   <input type="email" required placeholder="YOUR EMAIL" />
@@ -420,12 +420,12 @@
                   ></textarea>
                 </div>
                 <div class="submit-btn">
-                  <a href="#" class="main-btn">
+                  <button class="main-btn">
                     <span class="btn-text">Send Message</span>
                     <span class="btn-icon"
                       ><i class="fas fa-arrow-right"></i
                     ></span>
-                  </a>
+                  </button>
                 </div>
               </form>
             </div>
