--- a/index.html
+++ b/index.html
@@ -404,19 +404,38 @@
             <div class="right-contact">
               <form action="" id="form" class="contact-form">
                 <div class="input-control i-c-2">
-                  <input type="text" required placeholder="YOUR NAME" />
-                  <input type="email" required placeholder="YOUR EMAIL" />
+                  <input
+                    type="text"
+                    id="name"
+                    required
+                    placeholder="YOUR NAME"
+                    autocomplete="off"
+                  />
+                  <input
+                    type="email"
+                    id="email"
+                    required
+                    placeholder="YOUR EMAIL"
+                    autocomplete="off"
+                  />
                 </div>
                 <div class="input-control">
-                  <input type="text" required placeholder="ENTER SUBJECT" />
+                  <input
+                    type="text"
+                    id="subject"
+                    required
+                    placeholder="ENTER SUBJECT"
+                    autocomplete="off"
+                  />
                 </div>
                 <div class="input-control">
                   <textarea
                     name=""
-                    id=""
+                    id="message"
                     cols="15"
                     rows="8"
                     placeholder="Message Here..."
+                    autocomplete="off"
                   ></textarea>
                 </div>
                 <div class="submit-btn">
@@ -428,6 +447,9 @@
                   </button>
                 </div>
               </form>
+              <div class="message-sent-class" id="message-sent">
+                Message sent successfully!
+              </div>
             </div>
           </div>
         </div>
