--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
   </head>
   <body class="main-content">
     <header class="container header active" id="home">
@@ -26,7 +31,6 @@
         <div class="left-header">
           <div class="h-shape"></div>
           <div class="image">
-            <!-- <img src="img/hero.png" alt="" /> -->
             <img src="img/hero.jpg" alt="" />
           </div>
         </div>
@@ -41,10 +45,10 @@
             user-friendly websites.
           </p>
           <div class="btn-con">
-            <button type="button" class="main-btn">
+            <a href="img/cv.pdf" download="tipchans_CV.pdf" class="main-btn">
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -484,5 +488,6 @@
       <i class="fas fa-adjust"></i>
     </div>
     <script src="app.js"></script>
+    <script type="text/javascript" src="form.js"></script>
   </body>
 </html>
