update form validation for email-service & add error handling

--- a/index.html
+++ b/index.html
@@ -464,6 +464,9 @@
               <div class="message-sent-class" id="message-sent">
                 Message sent successfully!
               </div>
+              <div class="message-not-sent-class" id="message-not-sent">
+                Message Failed to Send ❌
+              </div>
             </div>
           </div>
         </div>
