--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </p>
           <div class="btn-con">
             <a href="img/cv.pdf" download="tipchans_CV.pdf" class="main-btn">
-              <span class="btn-text">Download CV</span>
+              <span class="btn-text">Download Resume</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
           </div>
@@ -76,7 +76,7 @@
             </p>
             <div class="btn-con">
               <button type="button" class="main-btn">
-                <span class="btn-text">Download CV</span>
+                <span class="btn-text">Download Resume</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </button>
             </div>
@@ -142,15 +142,7 @@
                 </div>
               </div>
             </div>
-            <div class="progress-bar">
-              <p class="prog-title">Tailwind</p>
-              <div class="progress-con">
-                <p class="prog-text">70%</p>
-                <div class="progress">
-                  <span class="tailwind"></span>
-                </div>
-              </div>
-            </div>
+
             <div class="progress-bar">
               <p class="prog-title">javascript</p>
               <div class="progress-con">
@@ -160,7 +152,7 @@
                 </div>
               </div>
             </div>
-            <div class="progress-bar">
+            <!-- <div class="progress-bar">
               <p class="prog-title">Typescript</p>
               <div class="progress-con">
                 <p class="prog-text">30%</p>
@@ -168,7 +160,7 @@
                   <span class="ts"></span>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="progress-bar">
               <p class="prog-title">ReactJS</p>
@@ -179,7 +171,17 @@
                 </div>
               </div>
             </div>
+
             <div class="progress-bar">
+              <p class="prog-title">Tailwind CSS</p>
+              <div class="progress-con">
+                <p class="prog-text">70%</p>
+                <div class="progress">
+                  <span class="tailwind"></span>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="progress-bar">
               <p class="prog-title">NEXTJs</p>
               <div class="progress-con">
                 <p class="prog-text">50%</p>
@@ -187,9 +189,9 @@
                   <span class="next"></span>
                 </div>
               </div>
-            </div>
+            </div> -->
 
-            <div class="progress-bar">
+            <!-- <div class="progress-bar">
               <p class="prog-title">NodeJS</p>
               <div class="progress-con">
                 <p class="prog-text">30%</p>
@@ -197,8 +199,8 @@
                   <span class="node"></span>
                 </div>
               </div>
-            </div>
-            <div class="progress-bar">
+            </div> -->
+            <!-- <div class="progress-bar">
               <p class="prog-title">ExpressJs</p>
               <div class="progress-con">
                 <p class="prog-text">40%</p>
@@ -206,7 +208,7 @@
                   <span class="express"></span>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
