--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
             user-friendly websites.
           </p>
           <div class="btn-con">
-            <a href="img/cv.pdf" download="tipchans_CV.pdf" class="main-btn">
+            <a
+              href="resume/resume.pdf"
+              download="resume_tipchan.pdf"
+              class="main-btn"
+            >
               <span class="btn-text">Download Resume</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -74,11 +78,16 @@
               <br />
               <br />
             </p>
+
             <div class="btn-con">
-              <button type="button" class="main-btn">
+              <a
+                href="resume/resume.pdf"
+                download="resume_tipchan.pdf"
+                class="main-btn"
+              >
                 <span class="btn-text">Download Resume</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
-              </button>
+              </a>
             </div>
           </div>
 
@@ -225,10 +234,20 @@
             <div class="hover-items">
               <h3>Project Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/tsongtheng/Portfolio"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
+                <a
+                  href="https://tipchan.netlify.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
                   <i class="fas fa-globe"></i>
                 </a>
               </div>
@@ -236,15 +255,25 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port2.jpg" alt="" />
+              <img src="img/port1.jpg" alt="" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/tsongtheng/GlobalFlavors"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
+                <a
+                  href="https://globalflavors.netlify.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
                   <i class="fas fa-globe"></i>
                 </a>
               </div>
@@ -252,79 +281,25 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port3.jpg" alt="" />
+              <img src="img/port1.jpg" alt="" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/tsongtheng/Weather-app"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fas fa-globe"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port4.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fas fa-globe"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port5.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fas fa-globe"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port2.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fas fa-globe"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port7.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
+                <a
+                  href="https://weather-app-948b8f.netlify.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
                   <i class="fas fa-globe"></i>
                 </a>
               </div>
