add projects mockup images

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="portfolios">
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/portfolio.jpg" alt="portfolio-img" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
@@ -255,7 +255,7 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/globalflavors.jpg" alt="globalflavors-img" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
@@ -281,7 +281,7 @@
           </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/port1.jpg" alt="" />
+              <img src="img/weather-app.jpg" alt="weather-app-img" />
             </div>
             <div class="hover-items">
               <h3>Project Source</h3>
