add nomadd project to portfolio page

--- a/index.html
+++ b/index.html
@@ -305,6 +305,32 @@
               </div>
             </div>
           </div>
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="img/nomadd.jpg" alt="nomadd-img" />
+            </div>
+            <div class="hover-items">
+              <h3>Project Source</h3>
+              <div class="icons">
+                <a
+                  href="https://github.com/tsongtheng/nomadd"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a
+                  href="https://nomadd.netlify.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
+                  <i class="fas fa-globe"></i>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
