add new resume file

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">C+</p>
+                <p class="large-text">B-</p>
                 <p class="small-text">
                   Github <br />
                   Stats
