--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h4>Information About me</h4>
             <p>
               I'm a web developer with a passion for building user-friendly and
-              visually appealing websites. I have over 1 years of experience
+              visually appealing websites. I have over 2 years of experience
               working on personal projects. I also enjoy working on open source
               projects and contributing to the web development community.
               <br />
@@ -103,7 +103,7 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">1+</p>
+                <p class="large-text">2+</p>
                 <p class="small-text">
                   Years of <br />
                   experience
@@ -155,26 +155,26 @@
             <div class="progress-bar">
               <p class="prog-title">javascript</p>
               <div class="progress-con">
-                <p class="prog-text">75%</p>
+                <p class="prog-text">80%</p>
                 <div class="progress">
                   <span class="js"></span>
                 </div>
               </div>
             </div>
-            <!-- <div class="progress-bar">
+            <div class="progress-bar">
               <p class="prog-title">Typescript</p>
               <div class="progress-con">
-                <p class="prog-text">30%</p>
+                <p class="prog-text">60%</p>
                 <div class="progress">
                   <span class="ts"></span>
                 </div>
               </div>
-            </div> -->
+            </div>
 
             <div class="progress-bar">
               <p class="prog-title">ReactJS</p>
               <div class="progress-con">
-                <p class="prog-text">70%</p>
+                <p class="prog-text">85%</p>
                 <div class="progress">
                   <span class="react"></span>
                 </div>
@@ -184,40 +184,40 @@
             <div class="progress-bar">
               <p class="prog-title">Tailwind CSS</p>
               <div class="progress-con">
-                <p class="prog-text">70%</p>
+                <p class="prog-text">80%</p>
                 <div class="progress">
                   <span class="tailwind"></span>
                 </div>
               </div>
             </div>
-            <!-- <div class="progress-bar">
+            <div class="progress-bar">
               <p class="prog-title">NEXTJs</p>
               <div class="progress-con">
-                <p class="prog-text">50%</p>
+                <p class="prog-text">60%</p>
                 <div class="progress">
                   <span class="next"></span>
                 </div>
               </div>
-            </div> -->
+            </div>
 
-            <!-- <div class="progress-bar">
+            <div class="progress-bar">
               <p class="prog-title">NodeJS</p>
               <div class="progress-con">
-                <p class="prog-text">30%</p>
+                <p class="prog-text">40%</p>
                 <div class="progress">
                   <span class="node"></span>
                 </div>
               </div>
-            </div> -->
-            <!-- <div class="progress-bar">
+            </div>
+            <div class="progress-bar">
               <p class="prog-title">ExpressJs</p>
               <div class="progress-con">
-                <p class="prog-text">40%</p>
+                <p class="prog-text">35%</p>
                 <div class="progress">
                   <span class="express"></span>
                 </div>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </section>
@@ -227,6 +227,32 @@
         </div>
         <p class="port-text">MY LATEST WORK</p>
         <div class="portfolios">
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="img/literary-club.jpg" alt="portfolio-img" />
+            </div>
+            <div class="hover-items">
+              <h3>Project Source</h3>
+              <div class="icons">
+                <a
+                  href="https://github.com/tsongtheng/Literary_Club_of_Jongchum"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a
+                  href="https://literary-club-of-jongchum.vercel.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
+                  <i class="fas fa-globe"></i>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="portfolio-item">
             <div class="image">
               <img src="img/portfolio.jpg" alt="portfolio-img" />
@@ -244,6 +270,32 @@
                 </a>
                 <a
                   href="https://tipchan.netlify.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
+                  <i class="fas fa-globe"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <div class="image">
+              <img src="img/nomadd.jpg" alt="nomadd-img" />
+            </div>
+            <div class="hover-items">
+              <h3>Project Source</h3>
+              <div class="icons">
+                <a
+                  href="https://github.com/tsongtheng/nomadd"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a
+                  href="https://nomadd.netlify.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="icon"
@@ -296,32 +348,6 @@
                 </a>
                 <a
                   href="https://weather-app-948b8f.netlify.app/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="icon"
-                >
-                  <i class="fas fa-globe"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/nomadd.jpg" alt="nomadd-img" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a
-                  href="https://github.com/tsongtheng/nomadd"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="icon"
-                >
-                  <i class="fab fa-github"></i>
-                </a>
-                <a
-                  href="https://nomadd.netlify.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="icon"
