--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
           </h1>
           <p>
             Web developer seeking a challenging and rewarding position where I
-            can use my skills and experience to build innovative and
-            user-friendly websites.
+            can utilize my skills and experience to architect, develop, and
+            maintain innovative and user-friendly websites that elevate user
+            experiences and drive business success.
           </p>
-          <div class="btn-con">
+          <!-- <div class="btn-con">
             <a
               href="resume/resume.pdf"
               download="resume_tipchan.pdf"
@@ -53,7 +54,7 @@
               <span class="btn-text">Download Resume</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </header>
@@ -79,7 +80,7 @@
               <br />
             </p>
 
-            <div class="btn-con">
+            <!-- <div class="btn-con">
               <a
                 href="resume/resume.pdf"
                 download="resume_tipchan.pdf"
@@ -88,7 +89,7 @@
                 <span class="btn-text">Download Resume</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
-            </div>
+            </div> -->
           </div>
 
           <div class="right-about">
